--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "aws-sdk": "^2.224.1",
     "axios": "^0.19.2",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.18.2",
     "commander": "^2.15.1",
     "cors": "^2.8.4",
